# smbr-cockpit

./: .eslintrc.json  .gitignore  .prettierrc  README.md  netlify.toml  next.config.js  package-lock.json  package.json  tailwind.config.js
src/app/: layout.tsx  page.tsx
src/app/_components/: AppLayoutContainer.tsx
src/app/playground/: page.tsx
src/components/: CockpitPanel.tsx  MovingBackground.tsx  MovingButton.tsx  PlayButton.tsx  RunButton.tsx
src/components/icons/: GithubIcon.tsx  RunIcon.tsx  TwitterIcon.tsx
src/hooks/: useSmbr.ts
src/pages/: _app.tsx  index.tsx
src/styles/: globals.css  theme.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
