[package]
name = "wasm"
version = "0.1.0"
authors = ["UniUrchin <85057870+UniUrchin@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
rand = "0.6.1"
regex = "1.8.1"
thiserror = "1.0.40"
wasm-bindgen = "0.2.84"
